# python-api

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  setup.py  test-requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  feature.md
.github/workflows/: citation.yml  codeql.yml  deploy.yaml  examples.yml  linting.yml  python-app.yml  test_client_macos.yml  test_client_macos_nightlies.yml  test_client_ubuntu.yml  test_client_ubuntu_nightlies.yml  test_client_windows.yml  test_client_windows_nightlies.yml  test_multiple_python.yml
examples/: README.md  SU2.py  SU2.sh  dynamic_rnn.py  logging-to-simvue.py  logging.py  simvue_openfoam.py
examples/Bluemira/: README.md  geometry_optimisation.py
examples/FDS/: activate_vents.fds  fds_unlim  minimal_fds.py  requirements.txt
examples/Geant4/: README.md  geant4_simvue.py  requirements.txt
examples/GeometryOptimisation/: bluemira_simvue_geometry_optimisation.py  readme.md  simvue.ini
examples/Logging/: README.md  logging-to-simvue.py
examples/OpenFOAM/: Dockerfile  requirements.txt  simvue_openfoam.py
examples/Optuna/: README.md  requirements.txt  simvue_optuna_pytorch.py
examples/Optuna/PyTorch/: README.md  requirements.txt  simvue_optuna_pytorch.py
examples/PyTorch/: README.md  main.py  requirements.txt
examples/SU2/: README.md  SU2.py  SU2.sh  surface_flow.vtk
examples/Tensorflow/: README.md  dynamic_rnn.py  requirements.txt
notebooks/: README.md  basic_example.ipynb  detailed_example.ipynb  non_python_example.ipynb  simvue_bluemira_example.ipynb  simvue_colab_example.ipynb  simvue_tensorflow_example.ipynb  temperatures.sh
observability/: __init__.py  client.py
simtrack/: __init__.py  client.py
simvue/: __init__.py  api.py  client.py  client_v2.py  config.py  converters.py  dispatch.py  eco.py  exception.py  exceptions.py  executor.py  filter.py  handler.py  metadata.py  metrics.py  models.py  offline.py  pynvml.py  remote.py  run.py  sender.py  serialization.py  simlab.py  simvue.py  simvue_types.py  system.py  types.py  upload.py  user_client.py  utilities.py  version.py  worker.py
simvue/api/: __init__.py  request.py  url.py
simvue/api/filters/: __init__.py  artifacts.py  base.py  folder.py  run.py
simvue/api/objects/: __init__.py  artifact.py  base.py  events.py  filter.py  filters.py  folder.py  grids.py  metric.py  metrics.py  run.py  stats.py  tag.py
simvue/config/: __init__.py  files.py  parameters.py  simvue_config_schema.json  user.py
simvue/dispatch/: __init__.py  base.py  direct.py  queued.py
simvue/eco/: __init__.py  api_client.py  config.py  emissions_monitor.py
simvue/experimental/: fetch.py
simvue/factory/: __init__.py  base.py  offline.py  remote.py
simvue/factory/dispatch/: __init__.py  base.py  direct.py  prompt.py  queued.py
simvue/factory/proxy/: __init__.py  base.py  offline.py  remote.py
simvue/offline/: actions.py  sender.py
simvue/sender/: __init__.py  actions.py  base.py
simvue/worker/: __init__.py  dispatch.py
src/simvue/: __init__.py  client.py  converters.py  handler.py  run.py  simvue_types.py  version.py
src/simvue/api/: __init__.py
src/simvue/config/: files.py  user.py
src/simvue/eco/: __init__.py  api_client.py
tests/: conftest.py
tests/cli/: test_sender_command.py
tests/example_data/: Cargo.toml  Project.toml  SU2_inv_ONERAM6.cfg  package-lock.json  pyproject.toml
tests/example_data/python_conda/: environment.yml
tests/example_data/python_poetry/: pyproject.toml
tests/example_data/python_uv/: pyproject.toml
tests/functional/: common.py  test_artifacts.py  test_artifacts_code.py  test_artifacts_code_created.py  test_artifacts_input.py  test_artifacts_input_created.py  test_artifacts_invalid.py  test_artifacts_output.py  test_artifacts_output_created.py  test_client.py  test_config.py  test_dispatch.py  test_executor.py  test_get_alerts.py  test_integration.py  test_metadata.py  test_offline.py  test_offline_artifacts_code.py  test_offline_artifacts_code_created.py  test_offline_artifacts_input.py  test_offline_artifacts_input_created.py  test_offline_artifacts_output.py  test_offline_metadata.py  test_run.py  test_run_artifact_upload.py  test_run_class.py  test_run_context_manager.py  test_run_created.py  test_run_created_offline.py  test_run_events.py  test_run_execute_process.py  test_run_folder.py  test_run_folder_get_delete.py  test_run_folder_metadata_find.py  test_run_metadata.py  test_run_metadata_update.py  test_run_metadata_update_created.py  test_run_metrics.py  test_run_offline.py  test_run_offline_context_manager.py  (+13 more)
tests/integration/: test_integration.py
tests/pytest/: conftest.py
tests/pytest/functional/: test_artifacts.py  test_executor.py  (+1 more)
tests/refactor/: conftest.py  test_client.py  test_config.py  test_converters.py  test_dispatch.py  test_executor.py  test_proxies.py  test_run.py  test_run_class.py  test_scenarios.py  test_utilities.py
tests/unit/: test_alert.py  test_artifact.py  test_conversion_to_dataframe.py  test_ecoclient.py  test_event_alert.py  test_events.py  test_experimental_features.py  test_fetch.py  test_file_artifact.py  test_file_storage.py  test_filter.py  test_filters.py  test_folder.py  test_grids.py  test_matplotlib_figure_mime_type.py  test_metadata.py  test_metric_range_alert.py  test_metric_threshold_alert.py  test_metrics.py  test_numpy_array_mime_type.py  test_numpy_array_serialization.py  test_object_artifact.py  test_pandas_dataframe_mimetype.py  test_pandas_dataframe_serialization.py  test_pickle_serialization.py  test_plotly_figure_mime_type.py  test_pytorch_tensor_mime_type.py  test_pytorch_tensor_serialization.py  test_run.py  test_run_exceptions.py  test_run_init_folder.py  test_run_init_metadata.py  test_run_init_tags.py  test_s3_storage.py  test_sender.py  test_serialization.py  test_simlab.py  test_simtrack.py  test_simvue.py  test_stats.py  (+6 more)
(+31 files in other folders)
