[project]
name = "simvue"
version = "2.1.2"
description = "Simulation tracking and monitoring"
authors = [
  {name = "Simvue Development Team", email = "info@simvue.io"}
]
license = "Apache v2"
requires-python = ">=3.10,<3.14"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
    "Typing :: Typed"
]

keywords = [
    "tracking",
    "monitoring",
    "metrics",
    "alerting",
    "metrics-gathering"
]
dependencies = [
  "requests (>=2.32.3,<3.0.0)",
  "pydantic (>=2.10.6,<3.0.0)",
  "tabulate (>=0.9.0,<0.10.0)",
  "msgpack (>=1.1.0,<2.0.0)",
  "pyjwt (>=2.10.1,<3.0.0)",
  "pandas (>=2.2.3,<3.0.0)",
  "toml (>=0.10.2,<0.11.0)",
  "click (>=8.1.8,<9.0.0)",
  "gitpython (>=3.1.44,<4.0.0)",
  "humanfriendly (>=10.0,<11.0)",
  "randomname (>=0.2.1,<0.3.0)",
  "numpy (>=2.0.0,<3.0.0)",
  "flatdict (>=4.0.1,<5.0.0)",
  "semver (>=3.0.4,<4.0.0)",
  "email-validator (>=2.2.0,<3.0.0)",
  "psutil (>=6.1.1,<7.0.0)",
  "tenacity (>=9.0.0,<10.0.0)",
  "typing-extensions (>=4.12.2,<5.0.0) ; python_version < \"3.11\"",
  "deepmerge (>=2.0,<3.0)",
  "geocoder (>=1.38.1,<2.0.0)",
]

[project.urls]
homepage = "https://simvue.io"
repository = "https://github.com/simvue-io/python-api"
documentation = "https://docs.simvue.io"

[project.optional-dependencies]
plot = ["plotly (>=6.0.0,<7.0.0)", "matplotlib (>=3.10.0,<4.0.0)"]

[project.scripts]
simvue_sender = "simvue.bin.sender:run"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-dependency = "^0.6.0"
ruff = ">=0.5.0,<0.10.0"
pytest-cov = ">=4.1,<7.0"
pytest-mock = "^3.14.0"
pytest-sugar = "^1.0.0"
pytest-xdist = "^3.6.1"
jinja2 = "^3.1.6"
types-requests = "^2.32.0.20241016"
interrogate = "^1.7.0"
pytest-timeout = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.extend-select = ["C901", "T201"]
lint.mccabe.max-complexity = 11
extend-exclude = ["tests", "examples", "notebooks"]

[tool.pytest.ini_options]
addopts = "-p no:warnings --no-cov -n 0"
testpaths = [
    "tests"
]
markers = [
    "eco: tests for emission metrics",
    "client: tests of Simvue client",
    "dispatch: test data dispatcher",
    "run: test the simvue Run class",
    "utilities: test simvue utilities module",
    "scenario: test scenarios",
    "executor: tests of executors",
    "config: tests of simvue configuration",
    "api: tests of RestAPI functionality",
    "unix: tests for UNIX systems only",
    "metadata: tests of metadata gathering functions",
    "online: tests for online functionality",
    "offline: tests for offline functionality",
    "local: tests of functionality which do not involve a server or writing to an offline cache file",
    "object_retrieval: tests relating to retrieval of objects from the server",
    "object_removal: tests relating to removal of objects from the server",
]

[tool.interrogate]
ignore-init-method = true
fail-under = 95
verbose = 1
exclude = ["docs", "tests"]

[tool.mypy]
ignore_missing_imports = true
