[project]
name = "spam-eggs"
version = "2020.0.0"
authors = [
  {name = "Pradyun Gedam", email = "pradyun@example.com"},
  {name = "Tzu-Ping Chung", email = "tzu-ping@example.com"},
  {name = "Another person"},
  {email = "different.person@example.com"},
]
maintainers = [
  {name = "Brett Cannon", email = "brett@example.com"}
]
dependencies = [
 "dill>=0.3.7",
 "requests>=2.31.0",
 "msgpack>=1.0.7",
 "tenacity>=8.2.3,<10.0.0",
 "PyJWT>=2.8.0",
 "psutil>=5.9.8",
 "pydantic>=2.5.3",
 "pandas>=2.2.0",
 "plotly>=5.18.0",
 "numpy>=1.26.3,<3.0.0",
 "matplotlib>=3.8.2",
 "typing_extensions>=4.11.0",
 "toml>=0.10.2",
 "click>=8.1.7",
 "gitpython>=3.1.43",
 "humanfriendly>=10.0",
 "tabulate>=0.9.0",
 "randomname>=0.2.1",
]
